--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
   },
   "homepage": "https://github.com/spbd/server",
   "dependencies": {
-    "restify": "~2.8.3"
+    "socket.io": "~1.2.0"
   }
 }
